fix datetime input text align

--- a/inst/css/filter-panel.css
+++ b/inst/css/filter-panel.css
@@ -54,6 +54,7 @@
 
 .filter_datelike_input input {
   height: 3rem !important;
+  text-align: center;
 }
 
 .filter_datelike_input span.input-group-text {
